# repolens

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DECISIONS.md  Dockerfile  README.md  RepoLens-系统总览文档.md  WORKFLOW.md  docker-compose.yml
backend/: README.md  pyproject.toml  requirements.txt
backend/repolens/: __init__.py  cloner.py  config.py  db.py  llm_service.py  main.py  orchestrator.py  reporter.py  schemas.py
backend/repolens/agents/: __init__.py  base.py  git_agent.py  planner_agent.py  registry.py  repo_agent.py  report_agent.py  static_agent.py
backend/repolens/analyzers/: __init__.py  git_analyzer.py  repo_analyzer.py  static_analyzer.py
backend/repolens/context/: __init__.py  base.py  context_manager.py  repository_context.py
backend/repolens/memory/: __init__.py  base.py  memory_manager.py  shared_memory.py
backend/repolens/planner/: __init__.py  dynamic_planner.py  planning_rules.py  repository_profiler.py
docs/: DEPLOYMENT.md  EVOLUTION_LOG.md  RELEASE_CHECKLIST.md
docs/adr/: ADR-001-agent-architecture.md  ADR-002-shared-memory.md  ADR-003-strategy-planning.md
docs/architecture/: agent-flow.md  system-overview.md
docs/case-studies/: case-flask-full.md
docs/performance/: PERFORMANCE.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
samples/: README.md
scripts/: README.md  dev.ps1  smoke.ps1  verify_samples.py
tests/: README.md  conftest.py  reconcile.py  test_agent_architecture.py  test_integration.py  verify_data.py
(+15 files in other folders)
